--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -177,24 +177,24 @@
                 <h1 class="text-sm font-semibold mb-6 text-gray-500 text-center">Join to Our Community with all time
                     access and free </h1>
 
-                <form action="#" method="POST" class="space-y-4">
+                <form class="space-y-4">
                     <!-- Your form elements go here -->
                     <div>
                         <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                        <input type="text" id="email" name="email"
+                        <input type="text" id="email"
                             class="mt-1 p-2 w-full border rounded-md focus:border-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-300 transition-colors duration-300">
                     </div>
                     <div>
                         <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
-                        <input type="password" id="password" name="password"
+                        <input type="password" id="password"
                             class="mt-1 p-2 w-full border rounded-md focus:border-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-300 transition-colors duration-300">
                     </div>
                     <div>
-                        <input type="checkbox" id="remember" name="vehicle1" value="Bike">
-                        <label for="remember" class="text-sm text-gray-700"> Remember Me</label><br>
+                        <input type="checkbox" id="remember_me">
+                        <label for="remember_me" class="text-sm text-gray-700"> Remember Me</label><br>
                     </div>
                     <div>
-                        <button type="submit"
+                        <button type="button" data-role="login"
                             class="w-full bg-black text-white p-2 rounded-md hover:bg-gray-800 focus:outline-none focus:bg-black focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900 transition-colors duration-300">Sign
                             Up</button>
                     </div>
@@ -207,6 +207,8 @@
             </div>
         </div>
     </div>
+    <script src="/js/pages/auth/login.js"></script>
+
 </body>
 
 </html>
