--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -29,9 +29,9 @@
               </path>
             </svg>
           </button>
-          <a href="https://flowbite.com" class="flex ms-2 md:me-24">
+          <a href="/" class="flex ms-2 md:me-24">
             <img src="https://flowbite.com/docs/images/logo.svg" class="h-8 me-3" alt="FlowBite Logo" />
-            <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap">Flowbite</span>
+            <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap">FileShelter</span>
           </a>
         </div>
         <div class="flex items-center">
