completed multer file upload

--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -84,14 +84,14 @@
           </a>
         </li>
       </ul>
-      <form id="uploadForm" action="/upload-multiple-files" method="post" enctype="multipart/form-data">
-        <label for="multiple_files" class="block relative w-full text-sm border border-gray-300 cursor-pointer bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded-lg focus:outline-none" style="line-height:1.8">
+      <form id="uploadForm">
+        <label for="multiple_files"
+          class="block relative w-full text-sm border border-gray-300 cursor-pointer bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded-lg focus:outline-none"
+          style="line-height:1.8">
           <span class="flex items-center justify-center">Upload</span>
           <input id="multiple_files" type="file" multiple class="hidden">
         </label>
-        <button type="submit"> aaa</button>
       </form>
-      
     </div>
   </aside>
 
@@ -498,48 +498,46 @@
 
 
 
-  <div class="fixed z-50 w-full h-16 max-w-lg -translate-x-1/2 bg-white border border-gray-200 rounded-full bottom-4 left-1/2 dark:bg-gray-700 dark:border-gray-600 sm:hidden">
+  <div
+    class="fixed z-50 w-full h-12 max-w-lg -translate-x-1/2 bg-white border border-gray-200 rounded-full bottom-4 left-1/2 dark:bg-gray-700 dark:border-gray-600 sm:hidden">
     <div class="grid h-full max-w-lg grid-cols-5 mx-auto gap-x-4 items-center">
       <button data-tooltip-target="tooltip-home" type="button"
         class="inline-flex flex-col items-center justify-center px-5 rounded-full hover:bg-gray-100 dark:hover:bg-gray-800 group">
         <i class="fa-regular fa-folder-open text-gray-600 dark:text-gray-400 text-lg"></i>
       </button>
-  
+
       <button data-tooltip-target="tooltip-wallet" type="button"
         class="inline-flex flex-col items-center justify-center px-5 hover:bg-gray-100 dark:hover:bg-gray-800 group">
         <i class="fa-regular fa-image text-gray-600 dark:text-gray-400 text-lg"></i>
       </button>
-  
+
       <div class="flex items-center justify-center">
         <button data-tooltip-target="tooltip-new" type="button"
           class="inline-flex items-center justify-center w-10 h-10 bg-blue-600 rounded-full hover:bg-blue-700 group focus:ring-4 focus:ring-blue-300 focus:outline-none dark:focus:ring-blue-800">
           <i class="fa-solid fa-plus text-white text-lg"></i>
         </button>
       </div>
-  
+
       <div id="tooltip-new" role="tooltip"
         class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
         Create new item
         <div class="tooltip-arrow" data-popper-arrow></div>
       </div>
-  
+
       <button data-tooltip-target="tooltip-settings" type="button"
         class="inline-flex flex-col items-center justify-center px-5 hover:bg-gray-100 dark:hover:bg-gray-800 group">
         <i class="fa-solid fa-heart text-gray-600 dark:text-gray-400 text-lg"></i>
       </button>
-  
+
       <button data-tooltip-target="tooltip-profile" type="button"
         class="inline-flex flex-col items-center justify-center px-5 rounded-full hover:bg-gray-100 dark:hover:bg-gray-800 group">
         <i class="fa-solid fa-user text-gray-600 dark:text-gray-400 text-lg"></i>
       </button>
     </div>
   </div>
-  
+
 
   <script src="/js/pages/home/index.js"></script>
-
-
-
 </body>
 
 </html>
