--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -83,6 +83,36 @@
             <span class="flex-1 ms-3 whitespace-nowrap">Documents</span>
           </a>
         </li>
+        <li>
+          <a href="#" class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" width="24"
+              height="24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M9 12h6m-6 4h6m2 4H7a2 2 0 01-2-2V5a2 2 0 012-2h7l5 5v12a2 2 0 01-2 2z" />
+            </svg>
+            <span class="flex-1 ms-3 whitespace-nowrap">Notifications</span>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" width="24"
+              height="24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M9 12h6m-6 4h6m2 4H7a2 2 0 01-2-2V5a2 2 0 012-2h7l5 5v12a2 2 0 01-2 2z" />
+            </svg>
+            <span class="flex-1 ms-3 whitespace-nowrap">Messages</span>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" width="24"
+              height="24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M9 12h6m-6 4h6m2 4H7a2 2 0 01-2-2V5a2 2 0 012-2h7l5 5v12a2 2 0 01-2 2z" />
+            </svg>
+            <span class="flex-1 ms-3 whitespace-nowrap">Collections</span>
+          </a>
+        </li>
       </ul>
       <form id="uploadForm">
         <label for="multiple_files"
@@ -98,8 +128,7 @@
 
 
   <div class="p-4 sm:ml-64 mt-14">
-    <div
-      class="grid grid-cols-4 gap-1 sm:grid-cols-2 md:grid-cols-3 md:gap-2 lg:grid-cols-4 lg:gap-3 xl:grid-cols-4 xl:gap-4">
+    <div class="grid grid-cols-4 gap-1 sm:grid-cols-2 md:grid-cols-3 md:gap-2 lg:grid-cols-4 lg:gap-3 xl:grid-cols-4 xl:gap-4" id = "file-list">
       <div
         class="aspect-w-1 aspect-h-1 rounded-lg bg-gray-200 text-surface shadow-secondary-1 dark:bg-surface-dark dark:text-white group">
         <div class="relative overflow-hidden bg-cover bg-no-repeat h-full">
