--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -105,9 +105,9 @@
   </aside>
 
 
-
   <div class="p-4 sm:ml-64 mt-14">
-    <div class="grid grid-cols-4 gap-1 sm:grid-cols-2 md:grid-cols-3 md:gap-2 lg:grid-cols-4 lg:gap-3 xl:grid-cols-4 xl:gap-4"
+    <div
+      class="grid grid-cols-4 gap-1 sm:grid-cols-2 md:grid-cols-3 md:gap-2 lg:grid-cols-4 lg:gap-3 xl:grid-cols-4 xl:gap-4"
       id="file-list">
     </div>
   </div>
@@ -158,6 +158,9 @@
       </button>
     </div>
   </div>
+
+  <!-- MODAL -->
+
 
 
   <script src="/js/pages/home/index.js"></script>
