--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -9,6 +9,12 @@
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="/css/loader.css">
+  <!-- <link rel="stylesheet" href="/css/lightGallery/lightgallery.min.css"> -->
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightgallery@2.7.2/css/lightgallery.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lg-thumbnail@1.4.0/dist/lg-thumbnail.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lg-fullscreen@1.4.0/dist/lg-fullscreen.min.css">
+  
 </head>
 
 <body class="bg-gray-100">
@@ -113,6 +119,7 @@
   </div>
 
 
+
   <div
     class="fixed z-50 w-full h-12 max-w-lg -translate-x-1/2 bg-white border border-gray-200 rounded-full bottom-4 left-1/2 dark:bg-gray-700 dark:border-gray-600 sm:hidden">
     <div class="grid h-full max-w-lg grid-cols-5 mx-auto gap-x-4 items-center">
@@ -164,6 +171,18 @@
 
 
   <script src="/js/pages/home/index.js"></script>
+  <!-- <script src="/js/helpers/lightgallery.min.js"></script> -->
+  <!-- <script src="/js/helpers/lg-thumbnail.min.js"></script> -->
+  <!-- <script src="/js/helpers/lg-fullscreen.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/lg-thumbnail@1.2.1/dist/lg-thumbnail.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/lg-fullscreen@1.2.1/dist/lg-fullscreen.min.js"></script>  
+  <script src="https://cdn.jsdelivr.net/npm/lightgallery@2.7.2/lightgallery.min.js"></script> 
+  <script>
+    lightGallery(document.getElementById('lightgallery'), {
+        thumbnail: true,
+        fullscreen: true,
+    });
+</script>
 </body>
 
 </html>
