removed light gallery and added fancybox

--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -9,12 +9,7 @@
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="/css/loader.css">
-  <!-- <link rel="stylesheet" href="/css/lightGallery/lightgallery.min.css"> -->
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightgallery@2.7.2/css/lightgallery.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lg-thumbnail@1.4.0/dist/lg-thumbnail.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lg-fullscreen@1.4.0/dist/lg-fullscreen.min.css">
-  
+  <link rel="stylesheet" href="/css/fancybox/fancybox.css" />
 </head>
 
 <body class="bg-gray-100">
@@ -171,18 +166,7 @@
 
 
   <script src="/js/pages/home/index.js"></script>
-  <!-- <script src="/js/helpers/lightgallery.min.js"></script> -->
-  <!-- <script src="/js/helpers/lg-thumbnail.min.js"></script> -->
-  <!-- <script src="/js/helpers/lg-fullscreen.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/lg-thumbnail@1.2.1/dist/lg-thumbnail.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/lg-fullscreen@1.2.1/dist/lg-fullscreen.min.js"></script>  
-  <script src="https://cdn.jsdelivr.net/npm/lightgallery@2.7.2/lightgallery.min.js"></script> 
-  <script>
-    lightGallery(document.getElementById('lightgallery'), {
-        thumbnail: true,
-        fullscreen: true,
-    });
-</script>
+  <script src="/js/helpers/fancybox.umd.js"></script>
 </body>
 
 </html>
