socket io helper

--- a/views/chat/chat.ejs
+++ b/views/chat/chat.ejs
@@ -198,9 +198,9 @@
 
   <!-- MODAL -->
 
-
-
+  <script src="/js/helpers/socket.io.min.js"></script>
   <script src="/js/helpers/fancybox.umd.js"></script>
+  <script src="/js/pages/chat/socket.js"></script>
 </body>
 
 </html>
