message view css and ejs

--- a/views/chat/chat.ejs
+++ b/views/chat/chat.ejs
@@ -9,6 +9,7 @@
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="/css/loader.css">
+  <link rel="stylesheet" href="/css/message.css">
   <link rel="stylesheet" href="/css/fancybox/fancybox.css" />
 </head>
 
@@ -106,90 +107,183 @@
   </aside>
 
 
-  <div class="p-4 sm:ml-64 mt-14">
-    <div class="" id="file-list">
-      <div class="h-screen flex flex-col">
-        <div class="bg-gray-200 flex-1 overflow-y-scroll">
-          <div class="bg-red-500" id="user"  user-id="6qw6q6w6ww76wq7w6qw76q6q">USERNAME</div>
-          <div class="px-4 py-2">
-            <div class="flex items-center mb-2">
-              <img class="w-8 h-8 rounded-full mr-2" src="https://picsum.photos/50/50" alt="User Avatar">
-              <div class="font-medium">John Doe</div>
-            </div>
-            <div class="bg-white rounded-lg p-2 shadow mb-2 max-w-sm">
-              Hi, how can I help you?
-            </div>
-            <div class="flex items-center justify-end">
-              <div class="bg-blue-500 text-white rounded-lg p-2 shadow mr-2 max-w-sm">
-                Sure, I can help with that.
-              </div>
-              <img class="w-8 h-8 rounded-full" src="https://picsum.photos/50/50" alt="User Avatar">
-            </div>
+  <div class="p-4 sm:ml-64">
+    <div class="app">
+      <div class="wrapper h-1/2">
+       <div class="conversation-area mt-5">
+        <div class="msg online">
+         <img class="msg-profile" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3364143/download+%281%29.png" alt="" />
+         <div class="msg-detail">
+          <div class="msg-username">Madison Jones</div>
+          <div class="msg-content">
+           <span class="msg-message">What time was our meet</span>
+           <span class="msg-date">20m</span>
           </div>
+         </div>
         </div>
-        <div class="bg-gray-100 px-4 py-2">
-          <div class="flex items-center">
-            <input class="w-full border rounded-full py-2 px-4 mr-2" type="text" placeholder="Type your message..."
-              id="message">
-            <button type="button" id="send"
-              class="bg-blue-500 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded-full">
-              Send
+        <div class="msg">
+         <img class="msg-profile" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3364143/download+%2812%29.png" alt="" />
+         <div class="msg-detail">
+          <div class="msg-username">Miguel Cohen</div>
+          <div class="msg-content">
+           <span class="msg-message">Adaptogen taiyaki austin jean shorts brunch</span>
+           <span class="msg-date">20m</span>
+          </div>
+         </div>
+        </div>
+        <div class="msg active">
+         <div class="msg-profile group">
+          <svg viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1">
+           <path d="M12 2l10 6.5v7L12 22 2 15.5v-7L12 2zM12 22v-6.5" />
+           <path d="M22 8.5l-10 7-10-7" />
+           <path d="M2 15.5l10-7 10 7M12 2v6.5" /></svg>
+         </div>
+         <div class="msg-detail">
+          <div class="msg-username">CodePen Group</div>
+          <div class="msg-content">
+           <span class="msg-message">Aysenur: I love CSS</span>
+           <span class="msg-date">28m</span>
+          </div>
+         </div>
+        </div>
+        <div class="msg online">
+         <img class="msg-profile" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3364143/download+%283%29+%281%29.png" alt="">
+         <div class="msg-detail">
+          <div class="msg-username">Henry Clark</div>
+          <div class="msg-content">
+           <span class="msg-message">Ethical typewriter williamsburg lo-fi street art</span>
+           <span class="msg-date">2h</span>
+          </div>
+         </div>
+        </div>
+
+        <button class="add"></button>
+        <div class="overlay"></div>
+       </div>
+       <div class="chat-area">
+        <div class="chat-area-header">
+         <div class="chat-area-title" id="user">CodePen Group</div>
+         <div class="chat-area-group">
+          <div class="detail-buttons">
+            <button class="detail-button">
+             <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor" stroke="currentColor" stroke-width="0" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone">
+              <path d="M22 16.92v3a2 2 0 01-2.18 2 19.79 19.79 0 01-8.63-3.07 19.5 19.5 0 01-6-6 19.79 19.79 0 01-3.07-8.67A2 2 0 014.11 2h3a2 2 0 012 1.72 12.84 12.84 0 00.7 2.81 2 2 0 01-.45 2.11L8.09 9.91a16 16 0 006 6l1.27-1.27a2 2 0 012.11-.45 12.84 12.84 0 002.81.7A2 2 0 0122 16.92z" />
+             </svg>
+             Call Group
             </button>
-          </div>
+            <button class="detail-button">
+             <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor" stroke="currentColor" stroke-width="0" stroke-linecap="round" stroke-linejoin="round" class="feather feather-video">
+              <path d="M23 7l-7 5 7 5V7z" />
+              <rect x="1" y="5" width="15" height="14" rx="2" ry="2" /></svg>
+             Video Chat
+            </button>
+           </div>
+         </div>
         </div>
+        <div class="chat-area-main">
+         <div class="chat-msg">
+          <div class="chat-msg-profile">
+           <img class="chat-msg-img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3364143/download+%283%29+%281%29.png" alt="" />
+           <div class="chat-msg-date">Message seen 1.22pm</div>
+          </div>
+          <div class="chat-msg-content">
+           <div class="chat-msg-text">Luctus et ultrices posuere cubilia curae.</div>
+           <div class="chat-msg-text">
+            <img src="https://media0.giphy.com/media/yYSSBtDgbbRzq/giphy.gif?cid=ecf05e47344fb5d835f832a976d1007c241548cc4eea4e7e&rid=giphy.gif" /></div>
+           <div class="chat-msg-text">Neque gravida in fermentum et sollicitudin ac orci phasellus egestas. Pretium lectus quam id leo.</div>
+          </div>
+         </div>
+         <div class="chat-msg owner">
+          <div class="chat-msg-profile">
+           <img class="chat-msg-img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3364143/download+%281%29.png" alt="" />
+           <div class="chat-msg-date">Message seen 1.22pm</div>
+          </div>
+          <div class="chat-msg-content">
+           <div class="chat-msg-text">Sit amet risus nullam eget felis eget. Dolor sed viverra ipsum😂😂😂</div>
+           <div class="chat-msg-text">Cras mollis nec arcu malesuada tincidunt.</div>
+          </div>
+         </div>
+         <div class="chat-msg">
+          <div class="chat-msg-profile">
+           <img class="chat-msg-img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3364143/download+%282%29.png" alt="">
+           <div class="chat-msg-date">Message seen 2.45pm</div>
+          </div>
+          <div class="chat-msg-content">
+           <div class="chat-msg-text">Aenean tristique maximus tortor non tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae😊</div>
+           <div class="chat-msg-text">Ut faucibus pulvinar elementum integer enim neque volutpat.</div>
+          </div>
+         </div>
+         <div class="chat-msg owner">
+          <div class="chat-msg-profile">
+           <img class="chat-msg-img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3364143/download+%281%29.png" alt="" />
+           <div class="chat-msg-date">Message seen 2.50pm</div>
+          </div>
+          <div class="chat-msg-content">
+           <div class="chat-msg-text">posuere eget augue sodales, aliquet posuere eros.</div>
+           <div class="chat-msg-text">Cras mollis nec arcu malesuada tincidunt.</div>
+          </div>
+         </div>
+         <div class="chat-msg">
+          <div class="chat-msg-profile">
+           <img class="chat-msg-img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3364143/download+%2812%29.png" alt="" />
+           <div class="chat-msg-date">Message seen 3.16pm</div>
+          </div>
+          <div class="chat-msg-content">
+           <div class="chat-msg-text">Egestas tellus rutrum tellus pellentesque</div>
+          </div>
+         </div>
+         <div class="chat-msg">
+          <div class="chat-msg-profile">
+           <img class="chat-msg-img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3364143/download+%283%29+%281%29.png" alt="" class="account-profile" alt="">
+           <div class="chat-msg-date">Message seen 3.16pm</div>
+          </div>
+          <div class="chat-msg-content">
+           <div class="chat-msg-text">Consectetur adipiscing elit pellentesque habitant morbi tristique senectus et.</div>
+          </div>
+         </div>
+         <div class="chat-msg owner">
+          <div class="chat-msg-profile">
+           <img class="chat-msg-img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3364143/download+%281%29.png" alt="" />
+           <div class="chat-msg-date">Message seen 2.50pm</div>
+          </div>
+          <div class="chat-msg-content">
+           <div class="chat-msg-text">Tincidunt arcu non sodales😂</div>
+          </div>
+         </div>
+         <div class="chat-msg">
+          <div class="chat-msg-profile">
+           <img class="chat-msg-img" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3364143/download+%282%29.png" alt="">
+           <div class="chat-msg-date">Message seen 3.16pm</div>
+          </div>
+          <div class="chat-msg-content">
+           <div class="chat-msg-text">Consectetur adipiscing elit pellentesque habitant morbi tristique senectus et🥰</div>
+          </div>
+         </div>
+        </div>
+        <div class="chat-area-footer">
+         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-video">
+          <path d="M23 7l-7 5 7 5V7z" />
+          <rect x="1" y="5" width="15" height="14" rx="2" ry="2" /></svg>
+         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-image">
+          <rect x="3" y="3" width="18" height="18" rx="2" ry="2" />
+          <circle cx="8.5" cy="8.5" r="1.5" />
+          <path d="M21 15l-5-5L5 21" /></svg>
+         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus-circle">
+          <circle cx="12" cy="12" r="10" />
+          <path d="M12 8v8M8 12h8" /></svg>
+         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-paperclip">
+          <path d="M21.44 11.05l-9.19 9.19a6 6 0 01-8.49-8.49l9.19-9.19a4 4 0 015.66 5.66l-9.2 9.19a2 2 0 01-2.83-2.83l8.49-8.48" /></svg>
+         <input type="text" id="message" placeholder="Type something here..." />
+         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-smile">
+          <circle cx="12" cy="12" r="10" />
+          <path d="M8 14s1.5 2 4 2 4-2 4-2M9 9h.01M15 9h.01" /></svg>
+         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-thumbs-up">
+          <path d="M14 9V5a3 3 0 00-3-3l-4 9v11h11.28a2 2 0 002-1.7l1.38-9a2 2 0 00-2-2.3zM7 22H4a2 2 0 01-2-2v-7a2 2 0 012-2h3" /></svg>
+        </div>
+       </div>
       </div>
-    </div>
+     </div>
   </div>
-
-
-
-  <div
-    class="fixed z-50 w-full h-12 max-w-lg -translate-x-1/2 bg-white border border-gray-200 rounded-full bottom-4 left-1/2 dark:bg-gray-700 dark:border-gray-600 sm:hidden">
-    <div class="grid h-full max-w-lg grid-cols-5 mx-auto gap-x-4 items-center">
-      <button data-tooltip-target="tooltip-home" type="button"
-        class="inline-flex flex-col items-center justify-center px-5 rounded-full hover:bg-gray-100 dark:hover:bg-gray-800 group">
-        <i class="fa-regular fa-folder-open text-gray-600 dark:text-gray-400 text-lg"></i>
-      </button>
-
-      <button data-tooltip-target="tooltip-wallet" type="button"
-        class="inline-flex flex-col items-center justify-center px-5 hover:bg-gray-100 dark:hover:bg-gray-800 group">
-        <i class="fa-regular fa-image text-gray-600 dark:text-gray-400 text-lg"></i>
-      </button>
-
-      <div class="flex items-center justify-center">
-        <button data-tooltip-target="tooltip-new" type="button"
-          class="inline-flex items-center justify-center w-10 h-10 bg-blue-600 rounded-full hover:bg-blue-700 group focus:ring-4 focus:ring-blue-300 focus:outline-none dark:focus:ring-blue-800">
-          <i class="fa-solid fa-plus text-white text-lg"></i>
-        </button>
-      </div>
-
-      <div id="tooltip-new" role="tooltip"
-        class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
-        Create new item
-        <div class="tooltip-arrow" data-popper-arrow></div>
-      </div>
-      <form id="uploadForm">
-        <label for="multiple_files"
-          class="block relative w-full text-sm border border-gray-300 cursor-pointer bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded-lg focus:outline-none"
-          style="line-height:1.8">
-          <span class="flex items-center justify-center" id="upload-button">Upload</span>
-          <input id="multiple_files" type="file" multiple class="hidden">
-        </label>
-      </form>
-
-      <button data-tooltip-target="tooltip-settings" type="button"
-        class="inline-flex flex-col items-center justify-center px-5 hover:bg-gray-100 dark:hover:bg-gray-800 group">
-        <i class="fa-solid fa-heart text-gray-600 dark:text-gray-400 text-lg"></i>
-      </button>
-
-      <button data-tooltip-target="tooltip-profile" type="button"
-        class="inline-flex flex-col items-center justify-center px-5 rounded-full hover:bg-gray-100 dark:hover:bg-gray-800 group">
-        <i class="fa-solid fa-user text-gray-600 dark:text-gray-400 text-lg"></i>
-      </button>
-    </div>
-  </div>
-
-  <!-- MODAL -->
 
   <script src="/js/helpers/socket.io.min.js"></script>
   <script src="/js/helpers/fancybox.umd.js"></script>
