simple spinner html/css/js

--- a/views/chat/chat.ejs
+++ b/views/chat/chat.ejs
@@ -85,6 +85,16 @@
           </a>
         </li>
         <li>
+          <a href="/wheel" class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" width="24"
+              height="24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M9 12h6m-6 4h6m2 4H7a2 2 0 01-2-2V5a2 2 0 012-2h7l5 5v12a2 2 0 01-2 2z" />
+            </svg>
+            <span class="flex-1 ms-3 whitespace-nowrap">Wheel</span>
+          </a>
+        </li>
+        <li>
           <a href="#" class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" width="24"
               height="24">
