--- a/views/wheel/details.ejs
+++ b/views/wheel/details.ejs
@@ -230,6 +230,7 @@
 
     <script src="/js/pages/home/index.js"></script>
     <script src="/js/pages/wheel/details.js"></script>
+    <script src="/js/helpers/sweetalert2.all.min.js"></script>
 </body>
 
 </html>
