--- a/views/wheel/details.ejs
+++ b/views/wheel/details.ejs
@@ -152,24 +152,8 @@
                         </th>
                     </tr>
                 </thead>
-                <tbody class="font-medium whitespace-nowrap  text-black ">
-                    <tr class="bg-gray-100 border-b  text-black">
-                        <th scope="row" class="px-6 py-4 font-medium whitespace-nowrap">
-                            1
-                        </th>
-                        <td class="px-6 py-4">
-                            Silver
-                        </td>
-                        <td class="px-6 py-4">
-                            Laptop
-                        </td>
-                        <td class="px-6 py-4">
-                            $2999
-                        </td>
-                        <td class="px-6 py-4">
-                            <a href="#" class="font-medium text-red-600 dark:text-red-500 hover:underline">Delete</a>
-                        </td>
-                    </tr>
+                <tbody class="font-medium whitespace-nowrap  text-black" id="topics-table-body">
+                 
             
                 </tbody>
             </table>
