--- a/views/wheel/index.ejs
+++ b/views/wheel/index.ejs
@@ -214,13 +214,10 @@
         </div>
     </div>
 
-    <!-- MODAL -->
 
-
-
-    <script src="/js/pages/home/index.js"></script>
-    <script src="/js/helpers/fancybox.umd.js"></script>
     <script src="/js/pages/wheel/index.js"></script>
+    <script src="/js/helpers/sweetalert2.all.min.js"></script>
+
 
 </body>
 
