added login/register error messages

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -189,6 +189,7 @@
                         <input type="password" id="password"
                             class="mt-1 p-2 w-full border rounded-md focus:border-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-300 transition-colors duration-300">
                     </div>
+                    <p id="error-msg" class="text-red-600"></p>
                     <div>
                         <input type="checkbox" id="remember_me">
                         <label for="remember_me" class="text-sm text-gray-700"> Remember Me</label><br>
