--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -199,6 +199,7 @@
                         <input type="password" id="confirm_password" 
                             class="mt-1 p-2 w-full border rounded-md focus:border-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-300 transition-colors duration-300">
                     </div>
+                    <p id="error-msg" class="text-red-600"></p>
                     <div>
                         <button type="button" data-role="register"
                             class="w-full bg-black text-white p-2 rounded-md hover:bg-gray-800 focus:outline-none focus:bg-black focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900 transition-colors duration-300">Sign
