fixed z-index on details button

--- a/views/wheel/index.ejs
+++ b/views/wheel/index.ejs
@@ -31,6 +31,8 @@
         }
         .details{
             position: absolute;
+            z-index: 20;
+
             /* top: 300px;
             left: 20px;
             background: white;
